--- a/features/prettier-config/.vscode/settings.json
+++ b/features/prettier-config/.vscode/settings.json
@@ -9,5 +9,8 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "search.exclude": {
+    "./prettier": true
   }
 }
