--- a/templates/node-typescript/package.json
+++ b/templates/node-typescript/package.json
@@ -1,1 +1,44 @@
-{}
+{
+  "name": "node-typescript-template",
+  "version": "0.1.0",
+  "description": "A template project for Node.js with TypeScript",
+  "author": "Alexander Wegener",
+  "license": "MIT",
+  "scripts": {
+    "build-ts": "tsc",
+    "build": "npm run build-ts && npm run lint",
+    "debug": "npm run build && npm run watch-debug",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "serve": "node dist/server.js",
+    "start": "npm run serve",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-node": "nodemon dist/server.js",
+    "watch-test": "npm run test -- --watchAll",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@types/concurrently": "5.2.1",
+    "@types/eslint": "7.2.6",
+    "@types/jest": "^26.0.23",
+    "@types/jquery": "3.5.5",
+    "@types/node": "^20.18",
+    "@types/supertest": "2.0.10",
+    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "@typescript-eslint/parser": "4.14.2",
+    "concurrently": "6.0.2",
+    "eslint": "7.19.0",
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.7",
+    "supertest": "6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-node": "9.1.1",
+    "typescript": "4.1.3"
+  },
+  "engines": {
+    "node": ">20.0.0"
+  }
+}
