--- a/features/formatter/.vscode/settings.json
+++ b/features/formatter/.vscode/settings.json
@@ -8,9 +8,13 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[markdown]": {
+    // "editor.defaultFormatter": "DavidAnson.vscode-markdownlint" // alternative
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[scss]": {
