--- a/features/vscode-settings/.vscode/settings.json
+++ b/features/vscode-settings/.vscode/settings.json
@@ -1,24 +1,25 @@
 {
-  "editor.formatOnSave": true,
-  "editor.tabSize": 2,
-  "files.trimTrailingWhitespace": true,
-  "files.insertFinalNewline": true,
-  "files.exclude": {
-    "**/node_modules": true,
-    "**/dist": true
-  },
-  "search.exclude": {
-    ".eslintcache": true,
-    "**/node_modules": true,
-    "**/dist": true,
-    "./coverage": true
-  },
-  "search.useIgnoreFiles": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
-  "cSpell.import": ["./.vscode/cspell-words.json"]
+	"editor.formatOnSave": true,
+	"editor.tabSize": 2,
+	"editor.stickyScroll.enabled": true,
+	"files.trimTrailingWhitespace": true,
+	"files.insertFinalNewline": true,
+	"files.exclude": {
+		"**/node_modules": true,
+		"**/dist": true
+	},
+	"search.exclude": {
+		".eslintcache": true,
+		"**/node_modules": true,
+		"**/dist": true,
+		"./coverage": true
+	},
+	"search.useIgnoreFiles": true,
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact"
+	],
+	"cSpell.import": ["./.vscode/cspell-words.json"]
 }
