--- a/features/jira-integration/.vscode/settings.json
+++ b/features/jira-integration/.vscode/settings.json
@@ -13,7 +13,10 @@
     "BUG:",
     "FIXME:",
     "ISSUE:",
-    "TODO"
+    "TODO",
+    "BUG",
+    "FIXME",
+    "ISSUE"
   ],
   "atlascode.jira.jqlList": [
     {
