--- a/templates/node-typescript/.eslintrc
+++ b/templates/node-typescript/.eslintrc
@@ -1,21 +1,20 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:@typescript-eslint/recommended"],
-  "parserOptions": {
-    "ecmaVersion": 2022,
-    "sourceType": "module"
-  },
-  "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-explicit-any": 1,
-    "@typescript-eslint/no-inferrable-types": [
-      "warn",
-      {
-        "ignoreParameters": true
-      }
-    ],
-    "@typescript-eslint/no-unused-vars": "warn"
-  }
+  "extends": [".eslintrc.base.json"]
+  // "overrides": [
+  //   {
+  //     "files": ["*.ts"],
+  //     "extends": [
+  //       "plugin:@nx/angular",
+  //       "plugin:@angular-eslint/template/process-inline-templates"
+  //     ],
+  //     "rules": {
+  //       "import/no-extraneous-dependencies": [
+  //         "error",
+  //         {
+  //           "devDependencies": true
+  //         }
+  //       ]
+  //     }
+  //   }
+  // ]
 }
