--- a/templates/node-typescript/project-cli.json
+++ b/templates/node-typescript/project-cli.json
@@ -1,3 +1,3 @@
 {
-  "features": ["vscode", "formatter", "dev-container"]
+  "features": ["vscode", "formatter", "eslint", "jest", "dev-container"]
 }
