--- a/templates/nestjs/project-cli.json
+++ b/templates/nestjs/project-cli.json
@@ -1,5 +1,5 @@
 {
   "baseTemplate": "node-typescript",
-  "features": [],
+  "features": []
   // "postInstall": "npm i -g @nestjs/cli && nest new project-name --strict" // TODO replace PROJECT_NAME
 }
