--- a/templates/nestjs-pristine/project-cli.json
+++ b/templates/nestjs-pristine/project-cli.json
@@ -1,5 +1,5 @@
 {
-  "baseTemplate": "node-typescript",
+  // "baseTemplate": "node-typescript",
   "features": []
   // "postInstall": "npm i -g @nestjs/cli && nest new project-name --strict" // TODO replace PROJECT_NAME
 }
